@@ -5,6 +5,7 @@ PostgreSQL 12-18 required. GEOS 3.8+ required. Proj 6.1+ required.
 
 * Bug fixes *
 
+- #5925, #5946, [topology] Have GetFaceContainingPoint survive EMPTY edges (Sandro Santilli)
 - #5936, [topology] Do script-based upgrade in a single transaction (Sandro Santilli)
 - #5908, [topology] Fix crash in GetFaceContainingPoint (Sandro Santilli)
 - #5907, [topology] Fix crash in TopoGeo_AddPolygon with EMPTY input (Sandro Santilli)
